# mpm

./: .gitignore  .gitlab-ci.yml  .travis.yml  Cargo.toml  LICENSE  PKG.toml  README.md
example/: Makefile  PKG.toml  test.c
example/fish/: PKG.toml
example/git/: PKG.toml
example/mpm-git/: PKG.toml
example/tar/: PKG.toml
lib/: build.rs  error.rs  ext.rs  lib.rs  repo.rs
src/: cli.yaml  main.rs  mpm.rs
tests/: mpm.rs
