[package]
name = "mpm"
version = "0.1.0"
authors = ["Alberto Corona <ac@albertocorona.com>"]

[dependencies]
toml = "0.1"
rustc-serialize = "0.3"
rpf = "0.1"
pgetopts = "0.1"
tar = "0.3"
time = "0.1"
walkdir = "0.1"
git2 = "0.3"
rust-crypto = "0.2"
hyper = "0.7"
flate2 = "0.2"

[lib]
name = "util"
path = "lib/lib.rs"

[[bin]]
name = "mpm"
path = "src/mpm.rs"
test = false
